--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -19,7 +19,7 @@
   <a href="http://www.jingdong.com" target="_blank">在新窗口打开京东</a>
   <a href="mailto:849344069@qq.com">点击给我发邮箱</a>
   <a href="#bottom">跳转到本页底部</a>
-  <a href="">点我可以下载一个文件</a><br />
+  <a href="https://drscdn.500px.org/photo/229389427/m%3D1170/v2?user_id=7012987&webp=true&sig=196fa0c161aa562478d08571764872f7d69a346c3c0b2e12aa00e2c6414eb28b" download="">点我可以下载一个文件</a><br />
   <img src="https://drscdn.500px.org/photo/229389427/m%3D1170/v2?user_id=7012987&webp=true&sig=196fa0c161aa562478d08571764872f7d69a346c3c0b2e12aa00e2c6414eb28b" alt="吃葡萄不吐葡萄皮" width="200px" height="200px">
   <hr />
   <hr />
@@ -205,11 +205,12 @@
   href =""
   target =""
   alt="owl" />
-<hr />
-<a href="#">点击我会在下面的frame里打开小米商场，但为什么打不开呢？</a><br />
-<iframe src="https://nodejs.org/static/images/logo.svg">
-  
-</iframe>
 </map>
+<hr />
+<a href="http://www.xiaomi.com" target="xiaomi">点击我会在下面的frame里打开小米商场，但为什么打不开呢？</a><br />
+<iframe src="https://nodejs.org/en/" name="xiaomi"></iframe><br />
+<span>怎样</span>　　　 　 　<span>在这两个字之间空这么大呢？</span><br />
+<span>怎样在页面中显示下面的内容呢？</span><br />
+<span id="bottom">&lt;span&gt;</span><span>&lt;/span&gt;</span>
 </body>
 </html>
