--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -149,8 +149,9 @@
 <input type="reset">
 </form>
 <hr />
-<table border="1">
-  <tr align="center">货品列表 
+<table border=1>
+  <caption>货品列表</caption>
+  <tr>
     <th>编号</th>
     <th bgcolor="red">品名</th>
     <th>进价</th>
@@ -158,32 +159,32 @@
   </tr>
   <tr>
     <th>001</th>
-    <th bgcolor="red">苹果</th>
-    <th rowspan="2">5</th>
-    <th>8</th>
+    <td bgcolor="red">苹果</td>
+    <td rowspan="2">5</td>
+    <td>8</td>
   </tr>
   <tr>
     <th>001</th>
-    <th bgcolor="red">桔子</th>
-    <th>8</th>
+    <td bgcolor="red">桔子</td>
+    <td>8</td>
   </tr>
   <tr>
     <th>001</th>
-    <th bgcolor="red">香蕉</th>
-    <th>5</th>
-    <th>8</th>
+    <td bgcolor="red">香蕉</td>
+    <td>5</td>
+    <td>8</td>
   </tr>
   <tr>
     <th>001</th>
-    <th bgcolor="red">山竹</th>
-    <th>5</th>
-    <th>8</th>
+    <td bgcolor="red">山竹</td>
+    <td>5</td>
+    <td>8</td>
   </tr>
 </table>
 <hr />
 
 <img src="https://drscdn.500px.org/photo/174778125/m%3D1170_k%3D1/2841ccf2a3720e8e794a6a6930f6ff2c" usemap="#owl" alt="miao" width="300px" height="450px" title="image title">
-<map name="owl" id="owl">
+ <map name="owl" id="owl"> 
   <area
   shape="circle"
   coords="130,250,80"
