--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -150,36 +150,44 @@
 </form>
 <hr />
 <table border=1>
+  <tbody>
   <caption>货品列表</caption>
+  <colgroup>
+    <col>
+    <col bgcolor=red>
+  </colgroup>
+  <thead>
   <tr>
     <th>编号</th>
-    <th bgcolor="red">品名</th>
+    <th>品名</th>
     <th>进价</th>
     <th>出价</th>
   </tr>
+  </thead>
   <tr>
     <th>001</th>
-    <td bgcolor="red">苹果</td>
+    <td>苹果</td>
     <td rowspan="2">5</td>
     <td>8</td>
   </tr>
   <tr>
     <th>001</th>
-    <td bgcolor="red">桔子</td>
+    <td>桔子</td>
     <td>8</td>
   </tr>
   <tr>
     <th>001</th>
-    <td bgcolor="red">香蕉</td>
+    <td>香蕉</td>
     <td>5</td>
     <td>8</td>
   </tr>
   <tr>
     <th>001</th>
-    <td bgcolor="red">山竹</td>
+    <td>山竹</td>
     <td>5</td>
     <td>8</td>
   </tr>
+  </tbody>
 </table>
 <hr />
 
