--- a/miao/级联菜单.html
+++ b/miao/级联菜单.html
@@ -6,36 +6,31 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style>
-    ul {
-      list-style-type: none;
-      position: absolute;
-      padding: 0;
-    }
-    ul li {
-      
+    ul ul{
+      display: none;
     }
   </style>
 </head>
 <body>
   <ul>
-      <li>A
-        <ul>
-          <li>B
-            <ul>
-              <li>C</li>
-              <li>D</li>
-              <li>E</li>
-            </ul>
-          </li>
-          <li>2</li>
-          <li>3</li>
-          <li>4</li>
-          <li>5</li>
-          <li>6</li>
-          <li>7</li>
-          <li>8</li>
+    <li>1
+      <ul>
+        <li>2
+          <ul>
+            <li>3
+             <ul>
+               <li>4</li>
+              </ul>
+            </li>
+          <li></li>
         </ul>
       </li>
-    </ul>
+      <li></li>
+      <li></li>
+    </ul></li>
+    <li></li>
+    <li></li>
+    <li></li>
+   </ul>
 </body>
 </html>
