--- a/miao/mobike-flex.html
+++ b/miao/mobike-flex.html
@@ -21,6 +21,7 @@
     div > img {
       width: 24.9%;
       height: 260px;
+      object-fit: cover;
     }
     @media (max-width: 1080px){
       div > img {
@@ -37,8 +38,6 @@
     @media (max-width: 640px){
       div > img {
         width: 100%;
-        xheight: 260px;
-        xjustify-content: space-between;
         margin-top: 2px
       }
       div {
