--- a/wang/笔记.html
+++ b/wang/笔记.html
@@ -36,3 +36,44 @@
     
       3. 对于杂合形页面，即布局复杂，又有很多文字
         布局使用rem，文字使用px，width=device-width
+http://www.iyunlu.com/view/css-xhtml/55.html
+清除浮动
+
+https://jsbin.com/ritibuq/1/edit?html,css,output
+三栏等高自适应布局
+
+https://jsbin.com/yibixup/1/edit?html,css,output
+bootstrap table
+
+
+flex布局
+  正方形阵列
+  包含块 flex加换行
+  小正方形定宽 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  动画
+
+  https://jsbin.com/dawecil/1/edit?html,css,output
+  https://tympanus.net/Tutorials/CSS3SlidingImagePanels/
+
+  纯css高级slider核心要点
