--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1,8 +1,8 @@
 <script id="ch0103/01">
-  var a = +prompt("请输入第一位数字a")
-  var b = +prompt("请输入第一位数字b")
-  console.log(a + b)
-</script>
+  var a = +prompt("Please input the value of A:");
+  var b = +prompt("Please input the value of B:");
+  console.log(a + b);
+  </script>
 <script id="ch0103/02">
   var a = +prompt("a")
   var b = +prompt("b")
